feat: 替换为传输历史 API